--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Описание">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon.png">
     <meta property="og:url" content="/">
     <meta property="og:title" content="Title">
     <meta property="og:description" content="description">
