--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="info__wrap_tab tab_2">
           <div class="info__list">
-            <div class="info__list_head">
+            <div class="info__list_head"><span class="subtitle smart">ЖК Курортный</span>
               <h2 class="title-h2 font-sup">Преимущества</h2>
             </div>
             <div class="info__list_items">
@@ -151,7 +151,7 @@
           <h2 class="title-h2 font-sup">Стиль и <span>территория</span> комплекса</h2>
           <p class="text">Архитектурный код зданий выдержан в неоклассическом стиле. Изящные открытые балконы, малоэтажный принцип застройки, фасады из современных материалов, выполненные в цветовой гамме южного побережья, сохраняют полную гармонию Комплекса с окружающей природой.</p>
           <div class="tabs">
-            <button class="tab" type="button">стиль</button>
+            <button class="tab active" type="button">стиль</button>
             <button class="tab" type="button">ландшафт</button>
             <button class="tab" type="button">виды</button>
             <button class="tab" type="button">досуг</button>
@@ -163,7 +163,7 @@
           <div class="image"><img class="lazyload" data-src="img/section3/map.jpg" src="#" alt="image"></div>
           <div class="container">
             <div class="map_info__control">
-              <div class="item item1">
+              <div class="item item1 active">
                 <button class="item__button" type="button"><span class="box"><span class="line"></span><span class="line"></span></span></button>
                 <div class="item__info">
                   <div class="item__info_top swiper-mapinfo"><img class="lazyload" data-src="img/section3/item1.jpg" src="#" alt="image"></div>
@@ -228,13 +228,19 @@
             <input class="field mask--phone js_phone" type="text" name="phone" placeholder="+7 (999) 999-99-99">
           </div>
           <div class="field-button">
-            <button class="button_accent" type="submit"><span>получить консультацию</span></button><span>Нажимая на кнопку, вы даёте согласие на обработку персональных данных </span>
+            <button class="button_accent" type="submit"><span class="first">получить консультацию</span><span class="last">оставить заявку</span></button><span>Нажимая на кнопку, вы даёте согласие на обработку персональных данных </span>
           </div>
         </form>
       </div>
     </section>
     <section class="layouts animate-sect" id="layouts" data-scroll-block>
-      <h2 class="title-h2 font-sup">Планировки</h2>
+      <div class="layouts__head">
+        <h2 class="title-h2 font-sup">Планировки</h2>
+        <div class="page_count">
+          <div class="first">1</div>
+          <div class="last">9</div>
+        </div>
+      </div>
       <div class="swiper slider_layout">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -337,7 +343,11 @@
         </div>
       </div>
       <div class="map__bottom">
-        <div class="overlay"><img class="lazyload" data-src="img/map.jpg" src="#" alt="image"></div>
+        <div class="overlay">
+          <picture>
+            <source class="lazyload" data-srcset="img/map_smart.jpg" media="(max-width: 768px)"><img class="lazyload" data-src="img/map.jpg" src="#" alt="image">
+          </picture>
+        </div>
         <div class="map__bottom_items">
           <div class="container">
             <div class="item item1">
@@ -401,9 +411,13 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide"><span class="title">ЖК Курортный это отличный<br> вариант для счастливой жизни</span>
                 <p class="text">Недвижимость в нем обладает огромным инвестиционным потенциалом и может стать для вас источником стабильного дохода и гарантом сохранности вашего капитала.</p>
+                <div class="smart"><img src="img/investment/right1_smart.jpg" alt="image"></div>
               </div>
               <div class="swiper-slide"><span class="title">Почему стоит инвестировать<br> в ЖК «Курортный» </span>
                 <p class="text">Учитывая достоинства и преимущества Комплекса с многолетней тенденцией к росту цен на недвижимость в Сочи и инвестируя в данный объект, можно рассчитывать на показатели рентабельности выше средних по региону.</p>
+                <div class="smart"><span class="title">Почему ЖК «Курортный» востребован</span>
+                  <p class="text">Идеальное расположение ЖК «Курортный» относительно ключевых объектов инфраструктуры, близость моря и горной местности с уникальными природно-климатическими зонами, качественное строительство, соответствующее стандартам застройки бизнес-класса, наличие в Комплексе помещений, предназначенных для коммерческих целей, определяют инвестиционную привлекательность собственности в ЖК «Курортный».</p>
+                </div>
               </div>
               <div class="swiper-slide">
                 <div class="list">
@@ -413,6 +427,12 @@
                 <div class="list">
                   <div class="list__count">02</div>
                   <p class="list__text">Ежегодное повышение стоимости аренды жилья в этом районе</p>
+                </div>
+                <div class="smart">
+                  <div class="list">
+                    <div class="list__count">03</div>
+                    <p class="list__text">Среднегодовая доходность от продажи квартиры в ЖК «Курортный» от 40%</p>
+                  </div><img class="lazyload" data-src="img/investment/right2_smart.jpg" src="#" alt="image">
                 </div>
               </div>
             </div>
@@ -470,7 +490,11 @@
               <div class="block_list__bottom">Понедельник - пятница:<br> с 9:00 до 21:00</div>
             </div>
           </div>
-          <div class="footer__top_center"><img class="lazyload" data-src="img/footer_bg.jpg" src="#" alt="image"></div>
+          <div class="footer__top_center">
+            <picture>
+              <source class="lazyload" data-srcset="img/footer_bg_smart.jpg" media="(max-width: 768px)"><img class="lazyload" data-src="img/footer_bg.jpg" src="#" alt="image">
+            </picture>
+          </div>
           <div class="footer__top_right"><span class="title">Заполните форму и наш специалист свяжется с вами: </span>
             <form class="form js_form" action="/">
               <div class="field-set">
@@ -488,7 +512,7 @@
                 <input class="field mask--phone js_phone" type="text" name="phone" placeholder="+7 (999) 999-99-99">
               </div>
               <div class="field-button">
-                <button class="button_accent" type="submit"><span>получить консультацию</span></button><span>Нажимая на кнопку, вы даёте согласие на обработку персональных данных </span>
+                <button class="button_accent" type="submit"><span class="first">получить консультацию</span><span class="last">оставить заявку</span></button><span>Нажимая на кнопку, вы даёте согласие на обработку персональных данных </span>
               </div>
             </form>
           </div>
@@ -517,7 +541,10 @@
             <li><a href="#investment">Вариант для инвестиций</a></li>
             <li><a href="#footer">Контакты</a></li>
           </ul>
-        </nav>
+        </nav><a class="slide_menu__phone" href="tel:89882392220"><svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M4 11.9998C3.86739 11.9998 3.74021 12.0523 3.64645 12.146C3.55268 12.2396 3.5 12.3666 3.5 12.499C3.5 12.6313 3.55268 12.7583 3.64645 12.8519C3.74021 12.9456 3.86739 12.9982 4 12.9982H6C6.13261 12.9982 6.25979 12.9456 6.35355 12.8519C6.44732 12.7583 6.5 12.6313 6.5 12.499C6.5 12.3666 6.44732 12.2396 6.35355 12.146C6.25979 12.0523 6.13261 11.9998 6 11.9998H4Z"/>
+<path d="M2 0C1.46957 0 0.960859 0.210714 0.585786 0.585786C0.210714 0.960859 0 1.46957 0 2V14C0 14.5304 0.210714 15.0391 0.585786 15.4142C0.960859 15.7893 1.46957 16 2 16H8C8.53043 16 9.03914 15.7893 9.41421 15.4142C9.78929 15.0391 10 14.5304 10 14V2C10 1.46957 9.78929 0.960859 9.41421 0.585786C9.03914 0.210714 8.53043 0 8 0H2ZM1 2C1 1.73478 1.10536 1.48043 1.29289 1.29289C1.48043 1.10536 1.73478 1 2 1H8C8.26522 1 8.51957 1.10536 8.70711 1.29289C8.89464 1.48043 9 1.73478 9 2V14C9 14.2652 8.89464 14.5196 8.70711 14.7071C8.51957 14.8946 8.26522 15 8 15H2C1.73478 15 1.48043 14.8946 1.29289 14.7071C1.10536 14.5196 1 14.2652 1 14V2Z"/>
+</svg><span>8 (988) 239-22-20</span></a>
       </div>
     </div>
     <div class="modal_overlay modal_phone" id="modal_phone" style="display: none">
