--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
         <div class="container">
           <h2 class="title-h2 font-sup">Стиль и <span>территория</span> комплекса</h2>
           <p class="text">Архитектурный код зданий выдержан в неоклассическом стиле. Изящные открытые балконы, малоэтажный принцип застройки, фасады из современных материалов, выполненные в цветовой гамме южного побережья, сохраняют полную гармонию Комплекса с окружающей природой.</p>
-          <div class="tabs"><a class="tab active" href="#map_info_block">стиль</a><a class="tab" href="#map_info_block">ландшафт</a><a class="tab" href="#map_info_block">виды</a><a class="tab" href="#map_info_block">досуг</a></div>
+          <div class="tabs" id="map_info_block"><a class="tab active" href="#map_info_block">стиль</a><a class="tab" href="#map_info_block">ландшафт</a><a class="tab" href="#map_info_block">виды</a><a class="tab" href="#map_info_block">досуг</a></div>
         </div>
       </div>
-      <div class="map_info__bottom" id="map_info_block">
+      <div class="map_info__bottom">
         <div class="container-max">
           <div class="image"><img class="lazyload" data-src="img/section3/map.jpg" src="#" alt="image"></div>
           <div class="container">
@@ -246,7 +246,7 @@
                   <h5 class="title-h5">2-комнатная квартира</h5>
                   <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
                 </div>
-                <div class="right"><span>Площадь от 17 до 55 м2</span>
+                <div class="right"><span>Площадь 51,5 м2</span>
                   <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
                 </div>
               </div>
@@ -257,10 +257,10 @@
               <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item2.png" src="#" alt="image"></div>
               <div class="layouts__item_bottom">
                 <div class="left">
-                  <h5 class="title-h5">2-комнатная квартира</h5>
+                  <h5 class="title-h5">1-комнатная квартира</h5>
                   <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
                 </div>
-                <div class="right"><span>Площадь от 17 до 55 м2</span>
+                <div class="right"><span>Площадь 47,8 м2</span>
                   <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
                 </div>
               </div>
@@ -271,10 +271,136 @@
               <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item3.png" src="#" alt="image"></div>
               <div class="layouts__item_bottom">
                 <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 42,8 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item4.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 33,7 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item5.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 42,6 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item6.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 42,8 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item7.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 47,8 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item8.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
                   <h5 class="title-h5">2-комнатная квартира</h5>
                   <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
                 </div>
-                <div class="right"><span>Площадь от 17 до 55 м2</span>
+                <div class="right"><span>Площадь 51,6 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item9.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 46,0 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item10.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">2-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 58,8 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item11.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">2-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 55,5 м2</span>
+                  <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="layouts__item">
+              <div class="layouts__item_image"><img class="lazyload" data-src="img/layouts/item12.png" src="#" alt="image"></div>
+              <div class="layouts__item_bottom">
+                <div class="left">
+                  <h5 class="title-h5">1-комнатная квартира</h5>
+                  <p>Первый этап строительства успешно завершен. Сдача второй очереди запланирована на середину 2022 года</p>
+                </div>
+                <div class="right"><span>Площадь 46,1 м2</span>
                   <button class="button_accent js--modal-phone" type="button"><span>оставить заявку</span></button>
                 </div>
               </div>
@@ -317,15 +443,15 @@
       </div>
       <div class="gallery__bottom">
         <div class="swiper">
-          <div class="swiper-wrapper" id="lightgallery"><a class="swiper-slide" data-src="img/gallery/item1.jpg">
+          <div class="swiper-wrapper" id="lightgallery"><a class="swiper-slide" data-responsive="img/gallery/item1_smart.jpg 540" data-src="img/gallery/item1.jpg">
               <picture>
                 <source srcset="img/gallery/item1_smart.jpg" media="(max-width: 540px)"><img src="img/gallery/item1.jpg" alt="image">
               </picture>
-              <p class="text">Все дома строятся в едином стиле, присущем курортам южной части Европы.</p></a><a class="swiper-slide" data-src="img/gallery/item2.jpg">
+              <p class="text">Все дома строятся в едином стиле, присущем курортам южной части Европы.</p></a><a class="swiper-slide" data-responsive="img/gallery/item2_smart.jpg 540" data-src="img/gallery/item2.jpg">
               <picture>
                 <source srcset="img/gallery/item2_smart.jpg" media="(max-width: 540px)"><img src="img/gallery/item2.jpg" alt="image">
               </picture>
-              <p class="text">Все дома строятся в едином стиле, присущем курортам южной части Европы.</p></a><a class="swiper-slide" data-src="img/gallery/item3.jpg">
+              <p class="text">Все дома строятся в едином стиле, присущем курортам южной части Европы.</p></a><a class="swiper-slide" data-responsive="img/gallery/item3_smart.jpg 540" data-src="img/gallery/item3.jpg">
               <picture>
                 <source srcset="img/gallery/item3_smart.jpg" media="(max-width: 540px)"><img src="img/gallery/item3.jpg" alt="image">
               </picture>
@@ -349,7 +475,7 @@
       <div class="map__bottom">
         <div class="overlay">
           <picture>
-            <source class="lazyload" data-srcset="img/map_smart.svg" media="(max-width: 768px)"><img class="lazyload" data-src="img/map.jpg" src="#" alt="image">
+            <source class="lazyload" data-srcset="img/map_smart.png" media="(max-width: 768px)"><img class="lazyload" data-src="img/map.jpg" src="#" alt="image">
           </picture>
         </div>
         <div class="map__bottom_items">
