--- a/index.html
+++ b/index.html
@@ -415,6 +415,16 @@
         </div>
       </div>
       <div class="gallery__bottom">
+        <div class="container">
+          <button class="nav_prev" type="button"><svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M5 1L1 5L5 9" stroke="white"/>
+</svg>
+          </button>
+          <button class="nav_next" type="button"><svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M1 1L5 5L1 9" stroke="white"/>
+</svg>
+          </button>
+        </div>
         <div class="swiper">
           <div class="swiper-wrapper" id="lightgallery"><a class="swiper-slide" data-src="img/gallery/2.jpeg">
               <picture><img class="lazyload" data-src="img/gallery/2.jpeg" src="#" alt="image"></picture>
@@ -465,7 +475,8 @@
           <div class="container">
             <div class="item item1">
               <div class="item__abs"></div>
-              <div class="item__text">Тисо-самшитовая роща</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="item__text">Тисо-самшитовая роща</div>
+              <div class="item__toggle">Реликтовый лес на восточном склоне горы Ахун</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
 <circle cx="27" cy="27" r="7" fill="white"/>
 <circle cx="27" cy="66" r="3" fill="#B26855"/>
@@ -473,13 +484,14 @@
             </div>
             <div class="item item2">
               <div class="item__abs"></div>
-              <div class="item__text">Скайпарк</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="item__text">Скайпарк</div>
+              <div class="item__toggle">Грандиозный парк приключений на высоте </div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
 <circle cx="27" cy="27" r="7" fill="white"/>
 <circle cx="27" cy="66" r="3" fill="#B26855"/>
 </svg>
             </div>
-            <div class="item item3 active">
+            <div class="item item3 active_">
               <div class="item__abs"></div>
               <div class="item__text">ЖК Курортный</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
@@ -489,7 +501,8 @@
             </div>
             <div class="item item4">
               <div class="item__abs"></div>
-              <div class="item__text">Морской пляж</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="item__text">Морской пляж</div>
+              <div class="item__toggle">Оборудованный пляж и чистейшее море</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
 <circle cx="27" cy="27" r="7" fill="white"/>
 <circle cx="27" cy="66" r="3" fill="#B26855"/>
@@ -497,7 +510,8 @@
             </div>
             <div class="item item5">
               <div class="item__abs"></div>
-              <div class="item__text">Аэропорт Сочи</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="item__text">Аэропорт Сочи</div>
+              <div class="item__toggle">Международный аэропорт имени В. И. Севастьянова</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
 <circle cx="27" cy="27" r="7" fill="white"/>
 <circle cx="27" cy="66" r="3" fill="#B26855"/>
@@ -506,7 +520,8 @@
             <div class="item item6">
               <div class="item__abs"></div>
               <div class="item__text">Сириус </div>
-              <div class="item__subtext">(Олимпийский парк)</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="item__subtext">(Олимпийский парк)</div>
+              <div class="item__toggle">современная административно-территориальная единица в Сочи</div><svg width="54" height="69" viewBox="0 0 54 69" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M54 27C54 40.5526 44.0148 51.773 31 53.7057C30.0932 53.8404 28.757 56.3435 27.858 58.1944C27.498 58.9356 26.502 58.9356 26.142 58.1944C25.243 56.3435 23.9068 53.8404 23 53.7057C9.98515 51.773 0 40.5526 0 27C0 12.0883 12.0883 0 27 0C41.9117 0 54 12.0883 54 27Z" fill="#B26855"/>
 <circle cx="27" cy="27" r="7" fill="white"/>
 <circle cx="27" cy="66" r="3" fill="#B26855"/>
@@ -514,6 +529,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="map__smart_block">
+        <div class="title-h2 font-sup">Тисо-самшитовая роща</div>
+        <p class="text">Реликтовый лес на восточном склоне горы Ахун</p>
       </div>
     </section>
     <section class="investment animate-sect" id="investment" data-scroll-block>
