--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="container">
         <h2 class="title-h2 font-sup">Получите индивидуальную <span>консультацию</span></h2>
         <p class="text">Заполните форму и наш специалист свяжется с вами: </p>
-        <form class="form js_form" action="/">
+        <form class="form js_form" action="/send.php">
           <div class="field-set">
             <div class="icon"><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M6.5 6.5C7.34538 6.5 8.15613 6.16418 8.7539 5.5664C9.35168 4.96863 9.6875 4.15788 9.6875 3.3125C9.6875 2.46712 9.35168 1.65637 8.7539 1.0586C8.15613 0.460825 7.34538 0.125 6.5 0.125C5.65462 0.125 4.84387 0.460825 4.2461 1.0586C3.64832 1.65637 3.3125 2.46712 3.3125 3.3125C3.3125 4.15788 3.64832 4.96863 4.2461 5.5664C4.84387 6.16418 5.65462 6.5 6.5 6.5ZM8.625 3.3125C8.625 3.87609 8.40112 4.41659 8.0026 4.8151C7.60409 5.21362 7.06359 5.4375 6.5 5.4375C5.93641 5.4375 5.39591 5.21362 4.9974 4.8151C4.59888 4.41659 4.375 3.87609 4.375 3.3125C4.375 2.74891 4.59888 2.20841 4.9974 1.8099C5.39591 1.41138 5.93641 1.1875 6.5 1.1875C7.06359 1.1875 7.60409 1.41138 8.0026 1.8099C8.40112 2.20841 8.625 2.74891 8.625 3.3125ZM12.875 11.8125C12.875 12.875 11.8125 12.875 11.8125 12.875H1.1875C1.1875 12.875 0.125 12.875 0.125 11.8125C0.125 10.75 1.1875 7.5625 6.5 7.5625C11.8125 7.5625 12.875 10.75 12.875 11.8125ZM11.8125 11.8083C11.8114 11.5469 11.6489 10.7606 10.9285 10.0402C10.2358 9.3475 8.93206 8.625 6.5 8.625C4.06687 8.625 2.76425 9.3475 2.0715 10.0402C1.35113 10.7606 1.18963 11.5469 1.1875 11.8083H11.8125Z" fill="#5C5C5C"/>
@@ -687,7 +687,7 @@
         </button>
         <h4 class="title-h4 font-sup">Получите индивидуальную <span>консультацию</span></h4>
         <p class="text">У Вас есть вопросы?<br> Получите онлайн-консультацию наших менеджеров</p>
-        <form class="form js_form" action="/">
+        <form class="form js_form" action="/send.php">
           <div class="field-set">
             <div class="icon"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M10 12.5C12.7614 12.5 15 10.2614 15 7.5C15 4.73858 12.7614 2.5 10 2.5C7.23858 2.5 5 4.73858 5 7.5C5 10.2614 7.23858 12.5 10 12.5Z" stroke="#D9D9D9" stroke-miterlimit="10"/>
